--- a/style.css
+++ b/style.css
@@ -88,3 +88,10 @@ section {
 .form-group {
   text-align: center;
 }
+
+.add-watchlist {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  opacity: 0.5;
+}
